[java] Remove unneeded PMD_JAVA_OPTS for preview features
Since we use asm for reading classfiles and not reflection,
`--enable-preview` is not needed anymore.